Changes in 2.0.1:
  o Build Changes
    * The Requires() policy now inspects Lib: and Lib.private:
      pkg-config keywords in .pc files to find library files, and
      where it finds them, it adds appropriate Conary trove
      requirements to the .pc files. (CNY-2370)

  o Bug Fixes:
    * An update bug that could result in a trove integrity error has
      been fixed. The issue would occur when updating packages where,
      for some files, the only changes are to file versions. (CNY-2403)

Changes in 2.0.0:
  o Major Changes:
    * The way Conary handles architecture flavors has been changed,
      primarily for better support for multilib systems that support
      having both 32-bit and 64-bit packages installed.
    * The Conary repository Access Control List capabilities have been
      significantly upgraded to support per-trove ACLs. Trove
      permissions are cached and recalculated whenever the ACLs change
      or new troves are added to the repository, for better scaling
      and fast changeset retrieval.
    * All dependencies on the GnuPG "gpg" program have been removed;
      Conary now implements the required OpenPGP functionality
      internally.

  o Optimizations:
    * Conary 2.0 is significantly faster for many repository commit
      operations.  Some "cvc promote" operations, in particular,
      have a 200% performance improvement.  Some group commit
      operations are 75% faster.  Creating a new shadow can be as much
      as 100% faster.  Details of some of the changes that provide
      the improvement are below.
    * Committing to repositories has been reworked to pull all
      modified streams from the repository or database with one
      query. (CNY-2053)
    * Unchanged stream sets now return None on diff.  This prevents
      the Conary repository from having to do unnecessary work to
      retrieve the "old" version of a stream and apply a diff when
      nothing actually changed.